Got rid off JWT auth, clientId expected to be in header injected by API gateway
